[package]
name = "tankille"
version = "0.1.0"
edition = "2024"

[lib]
name = "tankille"
path = "src/lib.rs"

[[bin]]
name = "tankille"
path = "src/test_cli/main.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.99"
serde = "1.0.219"
serde_json = "1.0.143"
chrono = "0.4.41"
